src/components/EmailPreviewCard/EmailPreviewCard.scss
@import "../../styles/shared.scss";

.EmailPreviewCard {
  @include absolute;
  display: flex;
  flex-direction: column;

  pointer-events: none;
  padding: 32px;
}

.email-type {
  display: flex;
  align-self: flex-start;
  background-color: $accent-1;
  color: white;
  border-radius: 2px;
  font-size: 9px;
  font-weight: 700;
  text-transform: uppercase;
}

.email-type span {
  margin: 2px 4px;
}

.email-subject {
  color: $gray-1;
  font-family: $font-var;
  font-size: 16px;
  font-weight: 700;
  line-height: 1.24;
  margin: 8px 0 12px 0;
}

.sender-section {
  display: grid;
  grid-template-columns: auto 1fr;
  column-gap: 6px;

  .avatar {
    background-color: $gray-3;
    width: 32px;
    height: 32px;
    border-radius: 50%;
    grid-row: 1 / 3;
  }

  .name {
    color: $gray-1;
    font-size: 12px;
    font-weight: 700;
    opacity: 0.66;
  }

  .to-list {
    color: $gray-1;
    font-size: 11px;
    opacity: 0.4;
    margin-top: 2px;
    text-transform: capitalize;
  }
}

p.email-body {
  flex: 1;
  font-size: 12px;
  line-height: 1.5;
  opacity: 0.75;
  margin-top: 24px;
  white-space: pre-line;
}

